NetBSD Problem Report #54744

From www@netbsd.org  Sat Dec  7 14:29:14 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8FF8F7A1A2
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  7 Dec 2019 14:29:14 +0000 (UTC)
Message-Id: <20191207142913.B7CF87A1C1@mollari.NetBSD.org>
Date: Sat,  7 Dec 2019 14:29:13 +0000 (UTC)
From: bruno@haible.de
Reply-To: bruno@haible.de
To: gnats-bugs@NetBSD.org
Subject: monetary.h has syntax error in C++ mode
X-Send-Pr-Version: www-1.0

>Number:         54744
>Category:       lib
>Synopsis:       monetary.h has syntax error in C++ mode
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Dec 07 14:30:00 +0000 2019
>Closed-Date:    Tue Dec 10 01:35:52 +0000 2019
>Last-Modified:  Tue Dec 10 01:35:52 +0000 2019
>Originator:     Bruno Haible
>Release:        8.0
>Organization:
GNU
>Environment:
NetBSD ... 8.0 NetBSD 8.0 ...
>Description:
/usr/include/monetary.h causes a syntax error when included in C++ mode.
>How-To-Repeat:
$ echo '#include <monetary.h>' > foo.cc
$ g++ -D_NETBSD_SOURCE -c foo.cc
In file included from foo.cc:1:0:
/usr/include/monetary.h:60:19: error: expected '}' at end of input
>Fix:
Balance out the __BEGIN_DECLS and __END_DECLS in monetary.h.

>Release-Note:

>Audit-Trail:
From: "Robert Elz" <kre@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54744 CVS commit: src/include
Date: Sun, 8 Dec 2019 02:15:02 +0000

 Module Name:	src
 Committed By:	kre
 Date:		Sun Dec  8 02:15:02 UTC 2019

 Modified Files:
 	src/include: monetary.h

 Log Message:
 PR lib/54744  (bruno@haible.de)

 Add missing __END_DECLS for C++ compiles.

 XXX pullup -9 XXX pullup -8 (bug not present in -7).


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/include/monetary.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Robert Elz <kre@munnari.OZ.AU>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: lib/54744: monetary.h has syntax error in C++ mode
Date: Sun, 08 Dec 2019 09:16:15 +0700

     Date:        Sat,  7 Dec 2019 14:30:01 +0000 (UTC)
     From:        bruno@haible.de
     Message-ID:  <20191207143001.52EC47A1CC@mollari.NetBSD.org>

   | Fix:
   | Balance out the __BEGIN_DECLS and __END_DECLS in monetary.h.

 Done in HEAD.    Will be pulled up to -9 and -8 soonish (a day or
 two for the requests to be made).   The bug is not present in -7

 Thanks for the report.

 kre

State-Changed-From-To: open->pending-pullups
State-Changed-By: kre@NetBSD.org
State-Changed-When: Sun, 08 Dec 2019 10:27:09 +0000
State-Changed-Why:
Pullups requested:
	[pullup-9 #531]
	[pullup-8 #1470]


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54744 CVS commit: [netbsd-8] src/include
Date: Sun, 8 Dec 2019 10:32:41 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Dec  8 10:32:41 UTC 2019

 Modified Files:
 	src/include [netbsd-8]: monetary.h

 Log Message:
 Pull up following revision(s) (requested by kre in ticket #1470):

 	include/monetary.h: revision 1.4

 PR lib/54744  (bruno@haible.de)
 Add missing __END_DECLS for C++ compiles.

 XXX pullup -9 XXX pullup -8 (bug not present in -7).


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.56.1 -r1.2.56.2 src/include/monetary.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54744 CVS commit: [netbsd-9] src/include
Date: Mon, 9 Dec 2019 16:05:05 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Dec  9 16:05:05 UTC 2019

 Modified Files:
 	src/include [netbsd-9]: monetary.h

 Log Message:
 Pull up following revision(s) (requested by kre in ticket #531):

 	include/monetary.h: revision 1.4

 PR lib/54744  (bruno@haible.de)

 Add missing __END_DECLS for C++ compiles.

 XXX pullup -9 XXX pullup -8 (bug not present in -7).


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.3.6.1 src/include/monetary.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->feedback
State-Changed-By: kre@NetBSD.org
State-Changed-When: Mon, 09 Dec 2019 16:19:32 +0000
State-Changed-Why:
Pullups to -8 & -9 now done.   Does this work for you now?


From: Bruno Haible <bruno@haible.de>
To: gnats-bugs@netbsd.org
Cc: lib-bug-people@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, kre@netbsd.org
Subject: Re: lib/54744 (monetary.h has syntax error in C++ mode)
Date: Tue, 10 Dec 2019 00:55:11 +0100

 > Does this work for you now?

 Yes, src/include/monetary.h looks correct now.

State-Changed-From-To: feedback->closed
State-Changed-By: kre@NetBSD.org
State-Changed-When: Tue, 10 Dec 2019 01:35:52 +0000
State-Changed-Why:
Submitter confirms that problem is fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.45 2018/12/21 14:23:33 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.